--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/porter.jpg
+   - assets/images/pic1.jpg
+   - assets/images/pic2.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
