--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
     
   # firebase_core: ^0.2.5+1
 
+  
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -34,6 +36,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_launcher_icons: ^0.7.0
+
+flutter_icons:
+  image_path: "assets/images/blueberry.png"
+  android: true
+  ios: true
 
 
 # For information on the generic Dart part of this file, see the
