--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  cached_network_image: ^0.5.1
   image: ^2.0.5
   image_picker: ^0.4.10
   uuid: ^1.0.3
